Adjusted the layout of the mock_exams show for purchases. Fixed layout issues on course_show with enrollment modal and exam_sittings modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4240,6 +4240,9 @@ header{
 .purchase-background {
   background-image: asset-url('cover_image_001.jpg');
 }
+.mock-background {
+  background-image: asset-url('cover_image_003.jpg');
+}
 .sign-in-background {
   background-image: asset-url('cover_image_001.jpg');
 }
